# CS236

Labs/Lab1/: Scanner.h  Token.h  hello.cpp  main  main.cpp
Labs/Lab1/main.dSYM/Contents/Resources/DWARF/: main
Labs/Lab2/: Parser.h  Scanner.h  Token.h  main  main.cpp
Labs/Lab3/: CMakeLists.txt  Lab3  Parser.h  Relation.h  Scanner.h  Scheme.h  main.cpp
Labs/Lab3/Lab3.dSYM/Contents/Resources/DWARF/: Lab3
Labs/Lab3/Lab3.dSYM/Contents/Resources/Relocations/x86_64/: Lab3.yml
Labs/Lab4/: CMakeLists.txt  Database.h  Parameter.h  Parser.h  Predicate.h  Relation.h  main  main.cpp
Labs/Lab5/: CMakeLists.txt  DatalogProgram.h  Graph.h  Interpreter.h  Node.h  Predicate.h  Token.h  lab5  main.cpp
Labs/Lab5/Lab5.dSYM/Contents/Resources/DWARF/: Lab5
Labs/Lab5/Lab5.dSYM/Contents/Resources/Relocations/aarch64/: Lab5.yml
Projects/Project1/: Scanner.h  Token.h  keywordID.txt  main  main.cpp  noEndString.txt  nowColon.txt  numID.txt  test1.txt  test2.txt
Projects/Project2/: CMakeLists.txt  DatalogProgram.h  Parameter.h  Parser.h  Predicate.h  Rule.h  Token.h  main.cpp  project2
Projects/Project3/: CMakeLists.txt  Database.h  DatalogProgram.h  Interpreter.h  Parameter.h  Predicate.h  Relation.h  Rule.h  Scheme.h  Tuple.h  main.cpp
Projects/Project3/project3.dSYM/Contents/Resources/DWARF/: project3
Projects/Project3/project3.dSYM/Contents/Resources/Relocations/x86_64/: project3.yml
Projects/Project4/: CMakeLists.txt  Interpreter.h  Predicate.h  Relation.h  Rule.h  Scanner.h
Projects/Project4/project4.dSYM/Contents/Resources/DWARF/: project4
Projects/Project4/project4.dSYM/Contents/Resources/Relocations/aarch64/: project4.yml
Projects/Project5/: CMakeLists.txt  Graph.h  Interpreter.h  Node.h  Parser.h  Predicate.h  Rule.h  main.cpp  proj5  run-tests.sh
Projects/Project5/proj5.dSYM/Contents/Resources/DWARF/: proj5
Projects/Project5/proj5.dSYM/Contents/Resources/Relocations/aarch64/: proj5.yml
Projects/Project5/project5.dSYM/Contents/Resources/DWARF/: project5
Projects/Project5/project5.dSYM/Contents/Resources/Relocations/aarch64/: project5.yml
(+9 files in other folders)
